--- a/_posts/2021-01-20-welcome.md
+++ b/_posts/2021-01-20-welcome.md
@@ -11,7 +11,7 @@ Greetings human! You've just arrived at my blog.
 <p> <a href="https://github.com/jesmatienzo-tip/sysad2-12021/"> Repository </a> </p>
 
 ```
-$ welcome haha
+$ echo "Henlo Earthling"
 ```
 
 
